# sauvc_ros2_ws

./: .gitignore  .gitmodules  README.md  mav.parm  mav.tlog  mav.tlog.raw  sim_check.py
src/sauvc_ardusub_demo/: README.md  package.xml  setup.cfg  setup.py
src/sauvc_ardusub_demo/sauvc_ardusub_demo/: ardusub_mission.py  motor_map_check.py
src/sauvc_bringup/: README.md  package.xml  setup.cfg  setup.py
src/sauvc_bringup/config/: cameras.yaml  ekf.yaml  flow.yaml
src/sauvc_bringup/launch/: cameras.launch.py  phase1_depth.launch.py  phase2_heading.launch.py  phase3_flow.launch.py  phase4_lane_heading.launch.py  phase5_ekf.launch.py  phase6_full.launch.py  phase7_preint.launch.py  pre_phase_sensor_check.launch.py
src/sauvc_drivers/: README.md  package.xml  setup.cfg  setup.py
src/sauvc_drivers/sauvc_drivers/: depth_altitude_node.py
src/sauvc_flow_eval/: README.md  README_code_and_logic_explanation_sauvc_flow_eval.md  package.xml  setup.cfg  setup.py
src/sauvc_flow_eval/config/: flow_eval_plotjuggler.xml
src/sauvc_flow_eval/flow_eval_logs/: flow_eval_20260722_135647.txt  flow_eval_20260722_185507.txt  flow_eval_20260722_191224.txt  flow_eval_20260722_194749.txt  flow_eval_20260722_211723.txt  flow_eval_20260722_211906.txt  flow_eval_20260722_211924.txt  flow_eval_20260722_212034.txt  flow_eval_20260722_213018.txt  flow_eval_20260723_082954.txt  flow_eval_20260723_083343.txt  flow_eval_20260723_085731.txt  flow_eval_20260723_095158.txt  flow_eval_20260723_095800.txt  flow_eval_20260723_103732.txt  flow_eval_20260723_103805.txt  flow_eval_20260723_165430.txt  flow_eval_20260723_165447.txt  flow_eval_20260723_170037.txt  flow_eval_20260723_170551.txt  flow_eval_20260723_172040.txt  flow_eval_20260723_173553.txt  flow_eval_20260723_174310.txt  flow_eval_20260723_175429.txt  flow_eval_20260723_210559.txt  flow_eval_20260723_210923.txt  flow_eval_20260723_211157.txt  flow_eval_20260723_214240.txt  flow_eval_20260723_214544.txt  flow_eval_20260723_224010.txt  flow_eval_20260723_225022.txt  flow_eval_20260723_230541.txt  flow_eval_20260723_231739.txt  flow_eval_20260723_233833.txt  flow_eval_20260723_235538.txt  flow_eval_20260724_000857.txt  flow_eval_20260724_002043.txt  flow_eval_20260724_002342.txt  flow_eval_20260724_011238.txt  flow_eval_20260724_011343.txt  (+9 more)
src/sauvc_flow_eval/launch/: flow_eval.launch.py  flow_eval.launch_original.py
src/sauvc_flow_eval/sauvc_flow_eval/: eval_common.py  flow_eval_node.py  flow_eval_node_original.py  flow_eval_node_working.py  flow_eval_node_working_1st.py  imu_noise_node.py  landmark_truth_node.py
src/sauvc_flow_eval/sauvc_flow_eval/estimators/: ekf_estimator.py  ekf_estimator_original.py  eskf_estimator.py  flow_estimator.py  flow_estimator_original.py  gtsam_estimator.py  gtsam_estimator_original.py  gtsam_estimator_working.py  gtsam_estimator_working_1st.py  tile_grid_estimator.py
src/sauvc_flow_eval/sauvc_flow_eval/scripts/: eval_helpers_mixin.py  eval_landmark_mixin.py  eval_parameters.py  eval_parameters_ADD.py  eval_publish_mixin.py  eval_quat_utils.py  eval_run_log.py  eval_scene_parser.py  live_traj_plot.py
src/sauvc_flow_eval/scripts/: yaw_attribution.py
src/sauvc_flow_eval/test/: test_eval_common.py
src/sauvc_gym/: README.md  package.xml  setup.cfg  setup.py
src/sauvc_gym/config/: station_keeping.yaml
src/sauvc_gym/docs/: STEPPED_BACKEND.md
src/sauvc_gym/sauvc_gym/: __init__.py  allocation.py  backends.py  ros_link.py  scn_parse.py  wrappers.py
src/sauvc_gym/sauvc_gym/envs/: __init__.py  auv_base_env.py  gate_env.py  station_keeping_env.py
src/sauvc_gym/sauvc_gym/scripts/: identify_allocation.py  make_vec_env.py  random_agent.py  train_sb3.py  verify_allocation.py
src/sauvc_gym/test/: test_allocation.py
src/sauvc_gym/test/fixtures/: vehicle_example.scn
src/sauvc_localization/: README.md  README_code_and_logic_explanation_sauvc_localization.md  package.xml  setup.cfg  setup.py
src/sauvc_localization/sauvc_localization/: detect_line_angle_method_explanation.md  flow_core.py  flow_core_original.py  flow_core_walkthrough.md  flow_velocity_node.py  (+7 more)
src/sauvc_logging/: README.md  package.xml  setup.cfg  setup.py
src/sauvc_logging/sauvc_logging/: csv_logger_node.py
src/sauvc_mission/: README.md  package.xml  setup.cfg  setup.py
src/sauvc_motion_demo/: README.md  package.xml  setup.cfg  setup.py
src/sauvc_sensor_check/: README.md  package.xml  setup.cfg  setup.py
src/sauvc_sensor_tests/: README.md  package.xml  setup.cfg  setup.py
src/sauvc_sim_bridge/: README.md  README_code_and_logic_explanation_sauvc_sim_bridge.md  package.xml  setup.cfg  setup.py
src/sauvc_sim_bridge/config/: control_ardusub.yaml  control_direct.yaml  flow_sim.yaml  flow_sim_original.yaml
src/sauvc_sim_bridge/launch/: sim_control_ardusub.launch.py  sim_control_direct.launch.py  sim_drivers.launch.py  sim_drivers.launch_original.py  sim_phase3_flow.launch.py
src/sauvc_sim_bridge/sauvc_sim_bridge/: ardusub_setpoint_node.py  control_core.py  depth_shim_node.py  depth_shim_node_original.py  direct_control_node.py  flow_scorer_node.py  frames.py  image_relay_node.py  imu_shim_node.py  rtf_monitor_node.py
src/sauvc_sim_bridge/test/: test_control_core.py  test_frames.py
src/sauvc_stonefish/: CMakeLists.txt  README.md  package.xml
src/sauvc_stonefish/launch/: sauvc_finals.launch.py  sauvc_finals_random.launch.py  sauvc_qualification.launch.py
src/sauvc_stonefish/scenarios/: my_auv.scn  my_auv_original.scn  sauvc_finals.scn  sauvc_pool.scn  sauvc_qualification.scn  vehicle_template.scn
src/sauvc_stonefish/scripts/: ardusub_json_bridge.py  ardusub_move_example.py  convert_vehicle_mesh.py  generate_meshes.py  randomize_arena.py
src/sauvc_teleop/: README.md  package.xml  setup.cfg  setup.py
src/sauvc_teleop/launch/: teleop_ardusub.launch.py  teleop_direct.launch.py
src/sauvc_teleop/sauvc_teleop/: keyboard_teleop_node.py  teleop_core.py
src/sauvc_teleop/test/: test_teleop_core.py
src/sauvc_traj_recorder/: README.md  package.xml  setup.cfg  setup.py
src/sauvc_vision/: README.md  package.xml  setup.py
(+27 files in other folders)
