<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sauvc_ardusub_demo</name>
  <version>0.1.0</version>
  <description>Same mission but through ArduSub SITL / MAVLink (pymavlink), per ArduSub docs.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <test_depend>ament_flake8</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
