<?xml version="1.0"?>
<package format="3">
  <name>sauvc_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configs for each test phase</description>
  <maintainer email="team@sauvc.local">SAUVC Team</maintainer>
  <license>MIT</license>
  <exec_depend>sauvc_drivers</exec_depend>
  <exec_depend>sauvc_localization</exec_depend>
  <exec_depend>sauvc_logging</exec_depend>
  <exec_depend>sauvc_sensor_check</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
