<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sauvc_logging</name>
  <version>0.1.0</version>
  <description>Automatic per-topic CSV logging with shutdown mean/std summary, used across every test phase</description>
  <maintainer email="team@sauvc.local">SAUVC Team</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <test_depend>ament_flake8</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
